internal-trfc-shft/webserver-deploy-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webserver-svc
  labels:
    app: webserver
    service: webserver
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: webserver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-v1
  labels:
    app: webserver
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
      version: v1
  template:
    metadata:
      labels:
        app: webserver
        version: v1
    spec:
      serviceAccountName: webserver-sa
      containers:
      - name: webserver
        image: <image_v1>
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-v2
  labels:
    app: webserver
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
      version: v2
  template:
    metadata:
      labels:
        app: webserver
        version: v2
    spec:
      serviceAccountName: webserver-sa
      containers:
      - name: webserver
        image: <image_v2>
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
