internal-trfc-shft/webserver-vs-80-20.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webserver-vs
spec:
  hosts:
    - webserver-svc
  http:
  - route:
    - destination:
        host: webserver-svc
        subset: v1
      weight: 80
    - destination:
        host: webserver-svc
        subset: v2
      weight: 20
